cmake_minimum_required(VERSION 3.8)
project(WindowsResearchKernel)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        base/inc/ntdlltrc.h
        base/ntos/build/warning.h
        base/ntos/cache/cachedat.c
        base/ntos/cache/cachesub.c
        base/ntos/cache/cc.h
        base/ntos/cache/ccperf.c
        base/ntos/cache/copysup.c
        base/ntos/cache/fssup.c
        base/ntos/cache/lazyrite.c
        base/ntos/cache/logsup.c
        base/ntos/cache/mdlsup.c
        base/ntos/cache/pinsup.c
        base/ntos/cache/vacbsup.c
        base/ntos/config/cmalloc.c
        base/ntos/config/cmapi.c
        base/ntos/config/cmapi2.c
        base/ntos/config/cmboot.c
        base/ntos/config/cmchek.c
        base/ntos/config/cmchek2.c
        base/ntos/config/cmclose.c
        base/ntos/config/cmconfig.c
        base/ntos/config/cmcontrl.c
        base/ntos/config/cmdat.c
        base/ntos/config/cmdat2.c
        base/ntos/config/cmdatini.c
        base/ntos/config/cmdelay.c
        base/ntos/config/cmdelete.c
        base/ntos/config/cmdown.c
        base/ntos/config/cmgquota.c
        base/ntos/config/cmhook.c
        base/ntos/config/cmhvlist.c
        base/ntos/config/cmindex.c
        base/ntos/config/cminit.c
        base/ntos/config/cmmapvw.c
        base/ntos/config/cmname.c
        base/ntos/config/cmnotify.c
        base/ntos/config/cmp.h
        base/ntos/config/cmparse.c
        base/ntos/config/cmparse2.c
        base/ntos/config/cmpbug.h
        base/ntos/config/cmquery.c
        base/ntos/config/cmsavres.c
        base/ntos/config/cmse.c
        base/ntos/config/cmsecache.c
        base/ntos/config/cmsubs.c
        base/ntos/config/cmsubs2.c
        base/ntos/config/cmsubs3.c
        base/ntos/config/cmsysini.c
        base/ntos/config/cmtrecpy.c
        base/ntos/config/cmtredel.c
        base/ntos/config/cmtree.c
        base/ntos/config/cmvalue.c
        base/ntos/config/cmwmi.c
        base/ntos/config/cmworker.c
        base/ntos/config/cmwrapr.c
        base/ntos/config/cmwrapr2.c
        base/ntos/config/hive.h
        base/ntos/config/hivebin.c
        base/ntos/config/hivecell.c
        base/ntos/config/hivechek.c
        base/ntos/config/hivefree.c
        base/ntos/config/hivehint.c
        base/ntos/config/hiveinit.c
        base/ntos/config/hiveload.c
        base/ntos/config/hivemap.c
        base/ntos/config/hivesum.c
        base/ntos/config/hivesync.c
        base/ntos/config/ntapi.c
        base/ntos/dbgk/dbgkobj.c
        base/ntos/dbgk/dbgkp.h
        base/ntos/dbgk/dbgkport.c
        base/ntos/dbgk/dbgkproc.c
        base/ntos/ex/amd64/wowinfo.c
        base/ntos/ex/callback.c
        base/ntos/ex/callperf.c
        base/ntos/ex/delay.c
        base/ntos/ex/event.c
        base/ntos/ex/eventpr.c
        base/ntos/ex/exatom.c
        base/ntos/ex/exdata.c
        base/ntos/ex/exinit.c
        base/ntos/ex/exp.h
        base/ntos/ex/fmutexc.c
        base/ntos/ex/handle.c
        base/ntos/ex/harderr.c
        base/ntos/ex/keyedevent.c
        base/ntos/ex/lookasid.c
        base/ntos/ex/luid.c
        base/ntos/ex/mutant.c
        base/ntos/ex/nbqueue.c
        base/ntos/ex/pool.c
        base/ntos/ex/probe.c
        base/ntos/ex/profile.c
        base/ntos/ex/pushlock.c
        base/ntos/ex/raise.c
        base/ntos/ex/resource.c
        base/ntos/ex/rundown.c
        base/ntos/ex/semphore.c
        base/ntos/ex/sysinfo.c
        base/ntos/ex/timer.c
        base/ntos/ex/uuid.c
        base/ntos/ex/win32.c
        base/ntos/ex/worker.c
        base/ntos/ex/zone.c
        base/ntos/fsrtl/dbcsname.c
        base/ntos/fsrtl/fastio.c
        base/ntos/fsrtl/faulttol.c
        base/ntos/fsrtl/filelock.c
        base/ntos/fsrtl/filter.c
        base/ntos/fsrtl/filtrctx.c
        base/ntos/fsrtl/fsfilter.c
        base/ntos/fsrtl/fsrtlp.h
        base/ntos/fsrtl/fsrtlpc.c
        base/ntos/fsrtl/largemcb.c
        base/ntos/fsrtl/name.c
        base/ntos/fsrtl/notify.c
        base/ntos/fsrtl/oplock.c
        base/ntos/fsrtl/pnp.c
        base/ntos/fsrtl/stackovf.c
        base/ntos/fsrtl/tunnel.c
        base/ntos/fsrtl/unc.c
        base/ntos/fstub/drivesup.c
        base/ntos/fstub/drivesup.h
        base/ntos/fstub/fstub.h
        base/ntos/fstub/haldisp.h
        base/ntos/inc/amd64.h
        base/ntos/inc/cache.h
        base/ntos/inc/cm.h
        base/ntos/inc/cmdata.h
        base/ntos/inc/cpyuchr.h
        base/ntos/inc/dbgk.h
        base/ntos/inc/dockintf.h
        base/ntos/inc/ex.h
        base/ntos/inc/exboosts.h
        base/ntos/inc/exlevels.h
        base/ntos/inc/fsrtl.h
        base/ntos/inc/hal.h
        base/ntos/inc/hivedata.h
        base/ntos/inc/i386.h
        base/ntos/inc/init.h
        base/ntos/inc/intrlk.h
        base/ntos/inc/io.h
        base/ntos/inc/kd.h
        base/ntos/inc/kddll.h
        base/ntos/inc/ke.h
        base/ntos/inc/kx.h
        base/ntos/inc/lfs.h
        base/ntos/inc/lpc.h
        base/ntos/inc/mm.h
        base/ntos/inc/ntos.h
        base/ntos/inc/ntosdef.h
        base/ntos/inc/ob.h
        base/ntos/inc/perf.h
        base/ntos/inc/pnp.h
        base/ntos/inc/po.h
        base/ntos/inc/pool.h
        base/ntos/inc/procpowr.h
        base/ntos/inc/ps.h
        base/ntos/inc/se.h
        base/ntos/inc/smbios.h
        base/ntos/inc/stktrace.h
        base/ntos/inc/v86emul.h
        base/ntos/inc/vdmntos.h
        base/ntos/inc/verifier.h
        base/ntos/inc/wmi.h
        base/ntos/init/initos.c
        base/ntos/init/ntkrnlmp.c
        base/ntos/init/ntoskrnl.c
        base/ntos/io/iomgr/cancelapi.c
        base/ntos/io/iomgr/complete.c
        base/ntos/io/iomgr/create.c
        base/ntos/io/iomgr/dev2dos.c
        base/ntos/io/iomgr/devctrl.c
        base/ntos/io/iomgr/dir.c
        base/ntos/io/iomgr/errorlog.c
        base/ntos/io/iomgr/fsctrl.c
        base/ntos/io/iomgr/internal.c
        base/ntos/io/iomgr/iodata.c
        base/ntos/io/iomgr/ioinit.c
        base/ntos/io/iomgr/iomgr.h
        base/ntos/io/iomgr/iosubs.c
        base/ntos/io/iomgr/loadunld.c
        base/ntos/io/iomgr/lock.c
        base/ntos/io/iomgr/misc.c
        base/ntos/io/iomgr/objsup.c
        base/ntos/io/iomgr/open.c
        base/ntos/io/iomgr/parse.c
        base/ntos/io/iomgr/qsea.c
        base/ntos/io/iomgr/qsfs.c
        base/ntos/io/iomgr/qsinfo.c
        base/ntos/io/iomgr/qsquota.c
        base/ntos/io/iomgr/read.c
        base/ntos/io/iomgr/write.c
        base/ntos/io/pnpmgr/pplastgood.h
        base/ntos/io/pnpmgr/ppvutil.h
        base/ntos/io/ioguid.c
        base/ntos/io/iop.h
        base/ntos/io/iopcmn.h
        base/ntos/io/ioverifier.h
        base/ntos/io/iovutil.h
        base/ntos/io/sessnirp.h
        base/ntos/io/trackirp.h
        base/ntos/ke/amd64/allproc.c
        base/ntos/ke/amd64/apcuser.c
        base/ntos/ke/amd64/callback.c
        base/ntos/ke/amd64/decode.c
        base/ntos/ke/amd64/exceptn.c
        base/ntos/ke/amd64/flush.c
        base/ntos/ke/amd64/flushtb.c
        base/ntos/ke/amd64/initkr.c
        base/ntos/ke/amd64/intobj.c
        base/ntos/ke/amd64/ipi.c
        base/ntos/ke/amd64/kiamd64.h
        base/ntos/ke/amd64/misc.c
        base/ntos/ke/amd64/pat.c
        base/ntos/ke/amd64/queuelock.c
        base/ntos/ke/amd64/runtime.c
        base/ntos/ke/amd64/spinlock.c
        base/ntos/ke/amd64/thredini.c
        base/ntos/ke/i386/abios.h
        base/ntos/ke/i386/abiosc.c
        base/ntos/ke/i386/allproc.c
        base/ntos/ke/i386/apcuser.c
        base/ntos/ke/i386/biosc.c
        base/ntos/ke/i386/callback.c
        base/ntos/ke/i386/exceptn.c
        base/ntos/ke/i386/flush.c
        base/ntos/ke/i386/flushtb.c
        base/ntos/ke/i386/gdtsup.c
        base/ntos/ke/i386/i386init.c
        base/ntos/ke/i386/intobj.c
        base/ntos/ke/i386/iopm.c
        base/ntos/ke/i386/kernlini.c
        base/ntos/ke/i386/kix86.h
        base/ntos/ke/i386/largepag.c
        base/ntos/ke/i386/ldtsup.c
        base/ntos/ke/i386/misc.c
        base/ntos/ke/i386/mtrr.c
        base/ntos/ke/i386/mtrr.h
        base/ntos/ke/i386/mtrramd.c
        base/ntos/ke/i386/pat.c
        base/ntos/ke/i386/pat.h
        base/ntos/ke/i386/thredini.c
        base/ntos/ke/i386/trapc.c
        base/ntos/ke/apcobj.c
        base/ntos/ke/apcsup.c
        base/ntos/ke/balmgr.c
        base/ntos/ke/bugcheck.c
        base/ntos/ke/config.c
        base/ntos/ke/debug.c
        base/ntos/ke/devquobj.c
        base/ntos/ke/dpclock.c
        base/ntos/ke/dpcobj.c
        base/ntos/ke/dpcsup.c
        base/ntos/ke/eventobj.c
        base/ntos/ke/gateobj.c
        base/ntos/ke/hifreqlk.c
        base/ntos/ke/interobj.c
        base/ntos/ke/kernldat.c
        base/ntos/ke/kevutil.c
        base/ntos/ke/ki.h
        base/ntos/ke/kiinit.c
        base/ntos/ke/miscc.c
        base/ntos/ke/mutntobj.c
        base/ntos/ke/procobj.c
        base/ntos/ke/profobj.c
        base/ntos/ke/queueobj.c
        base/ntos/ke/raisexcp.c
        base/ntos/ke/semphobj.c
        base/ntos/ke/thkemul.c
        base/ntos/ke/thredobj.c
        base/ntos/ke/thredsup.c
        base/ntos/ke/timerobj.c
        base/ntos/ke/timersup.c
        base/ntos/ke/wait.c
        base/ntos/ke/waitsup.c
        base/ntos/ke/xipi.c
        base/ntos/ke/yield.c
        base/ntos/lpc/lpcclose.c
        base/ntos/lpc/lpccompl.c
        base/ntos/lpc/lpcconn.c
        base/ntos/lpc/lpccreat.c
        base/ntos/lpc/lpcinit.c
        base/ntos/lpc/lpclistn.c
        base/ntos/lpc/lpcp.h
        base/ntos/lpc/lpcpriv.c
        base/ntos/lpc/lpcquery.c
        base/ntos/lpc/lpcqueue.c
        base/ntos/lpc/lpcrecv.c
        base/ntos/lpc/lpcreply.c
        base/ntos/lpc/lpcsend.c
        base/ntos/mm/amd64/dataamd.c
        base/ntos/mm/amd64/initamd.c
        base/ntos/mm/amd64/miamd.h
        base/ntos/mm/i386/data386.c
        base/ntos/mm/i386/init386.c
        base/ntos/mm/i386/mi386.h
        base/ntos/mm/i386/paesup.c
        base/ntos/mm/i386/procpae.c
        base/ntos/mm/i386/procx86.c
        base/ntos/mm/i386/setmodfy.c
        base/ntos/mm/acceschk.c
        base/ntos/mm/addrsup.c
        base/ntos/mm/allocpag.c
        base/ntos/mm/allocvm.c
        base/ntos/mm/buildmdl.c
        base/ntos/mm/creasect.c
        base/ntos/mm/deleteva.c
        base/ntos/mm/dmpaddr.c
        base/ntos/mm/extsect.c
        base/ntos/mm/flushbuf.c
        base/ntos/mm/flushsec.c
        base/ntos/mm/forksup.c
        base/ntos/mm/freevm.c
        base/ntos/mm/hypermap.c
        base/ntos/mm/iosup.c
        base/ntos/mm/lockvm.c
        base/ntos/mm/mapcache.c
        base/ntos/mm/mapview.c
        base/ntos/mm/mi.h
        base/ntos/mm/miglobal.c
        base/ntos/mm/mmfault.c
        base/ntos/mm/mminit.c
        base/ntos/mm/mmquota.c
        base/ntos/mm/mmsup.c
        base/ntos/mm/modwrite.c
        base/ntos/mm/pagfault.c
        base/ntos/mm/pfndec.c
        base/ntos/mm/pfnlist.c
        base/ntos/mm/physical.c
        base/ntos/mm/procsup.c
        base/ntos/mm/protect.c
        base/ntos/mm/querysec.c
        base/ntos/mm/queryvm.c
        base/ntos/mm/readwrt.c
        base/ntos/mm/sectsup.c
        base/ntos/mm/session.c
        base/ntos/mm/sessload.c
        base/ntos/mm/shutdown.c
        base/ntos/mm/sysload.c
        base/ntos/mm/sysptes.c
        base/ntos/mm/umapview.c
        base/ntos/mm/vadtree.c
        base/ntos/mm/wrtfault.c
        base/ntos/mm/wrtwatch.c
        base/ntos/mm/wslist.c
        base/ntos/mm/wsmanage.c
        base/ntos/mm/wstree.c
        base/ntos/mm/zeropage.c
        base/ntos/ob/fastref.c
        base/ntos/ob/obclose.c
        base/ntos/ob/obcreate.c
        base/ntos/ob/obdevmap.c
        base/ntos/ob/obdir.c
        base/ntos/ob/obhandle.c
        base/ntos/ob/obinit.c
        base/ntos/ob/obinsert.c
        base/ntos/ob/oblink.c
        base/ntos/ob/obp.h
        base/ntos/ob/obquery.c
        base/ntos/ob/obref.c
        base/ntos/ob/obsdata.c
        base/ntos/ob/obse.c
        base/ntos/ob/obtype.c
        base/ntos/ob/obvutil.h
        base/ntos/ob/obwait.c
        base/ntos/perf/hooks.c
        base/ntos/perf/logging.c
        base/ntos/perf/perfdata.c
        base/ntos/perf/perfp.h
        base/ntos/perf/perfsup.c
        base/ntos/ps/amd64/psctxamd64.c
        base/ntos/ps/amd64/psldt.c
        base/ntos/ps/amd64/psvdm.c
        base/ntos/ps/i386/psctx386.c
        base/ntos/ps/i386/psldt.c
        base/ntos/ps/i386/psvdm.c
        base/ntos/ps/create.c
        base/ntos/ps/kulookup.c
        base/ntos/ps/pscid.c
        base/ntos/ps/psctx.c
        base/ntos/ps/psdelete.c
        base/ntos/ps/psenum.c
        base/ntos/ps/pshelper.c
        base/ntos/ps/psimpers.c
        base/ntos/ps/psinit.c
        base/ntos/ps/psjob.c
        base/ntos/ps/psopen.c
        base/ntos/ps/psp.h
        base/ntos/ps/psquery.c
        base/ntos/ps/psquota.c
        base/ntos/ps/psspnd.c
        base/ntos/ps/security.c
        base/ntos/raw/cleanup.c
        base/ntos/raw/close.c
        base/ntos/raw/create.c
        base/ntos/raw/fileinfo.c
        base/ntos/raw/fsctrl.c
        base/ntos/raw/nodetype.h
        base/ntos/raw/rawdisp.c
        base/ntos/raw/rawinit.c
        base/ntos/raw/rawprocs.h
        base/ntos/raw/rawstruc.h
        base/ntos/raw/readwrit.c
        base/ntos/raw/strucsup.c
        base/ntos/raw/volinfo.c
        base/ntos/rtl/amd64/context.c
        base/ntos/rtl/amd64/exdsptch.c
        base/ntos/rtl/amd64/misalign.c
        base/ntos/rtl/amd64/ntrtlamd64.h
        base/ntos/rtl/amd64/raise.c
        base/ntos/rtl/amd64/stkwalk.c
        base/ntos/rtl/i386/context.c
        base/ntos/rtl/i386/debug3.c
        base/ntos/rtl/i386/divlarge.c
        base/ntos/rtl/i386/exdsptch.c
        base/ntos/rtl/i386/getcalr.c
        base/ntos/rtl/i386/ntrtl386.h
        base/ntos/rtl/acledit.c
        base/ntos/rtl/add2stra.c
        base/ntos/rtl/add2strt.h
        base/ntos/rtl/add2strw.c
        base/ntos/rtl/assert.c
        base/ntos/rtl/atom.c
        base/ntos/rtl/avltable.c
        base/ntos/rtl/bitmap.c
        base/ntos/rtl/byteswap.c
        base/ntos/rtl/cnvint.c
        base/ntos/rtl/debug.c
        base/ntos/rtl/eballoc.c
        base/ntos/rtl/environ.c
        base/ntos/rtl/error.c
        base/ntos/rtl/error.h
        base/ntos/rtl/excptdbg.c
        base/ntos/rtl/generr.c
        base/ntos/rtl/gentable.c
        base/ntos/rtl/guid.c
        base/ntos/rtl/imagedir.c
        base/ntos/rtl/intbits.c
        base/ntos/rtl/ldrreloc.c
        base/ntos/rtl/ldrrsrc.c
        base/ntos/rtl/lookup.c
        base/ntos/rtl/message.c
        base/ntos/rtl/nls.c
        base/ntos/rtl/nlsxlat.c
        base/ntos/rtl/ntrtlp.h
        base/ntos/rtl/pctohdr.c
        base/ntos/rtl/peb.c
        base/ntos/rtl/prefix.c
        base/ntos/rtl/regutil.c
        base/ntos/rtl/rtlassig.c
        base/ntos/rtl/rtldata.c
        base/ntos/rtl/rtlexec.c
        base/ntos/rtl/rtlnthdr.c
        base/ntos/rtl/sertl.c
        base/ntos/rtl/splay.c
        base/ntos/rtl/stktrace.c
        base/ntos/rtl/str2adda.c
        base/ntos/rtl/str2addt.h
        base/ntos/rtl/str2addw.c
        base/ntos/rtl/string.c
        base/ntos/rtl/sysvol.c
        base/ntos/rtl/time.c
        base/ntos/rtl/tracedb.c
        base/ntos/rtl/tracedbp.h
        base/ntos/se/accessck.c
        base/ntos/se/adt.h
        base/ntos/se/adtinit.c
        base/ntos/se/adtlog.c
        base/ntos/se/adtp.h
        base/ntos/se/adtutil.c
        base/ntos/se/adtutil.h
        base/ntos/se/adtvars.c
        base/ntos/se/capture.c
        base/ntos/se/pch.h
        base/ntos/se/privileg.c
        base/ntos/se/rmaudit.c
        base/ntos/se/rmlogon.c
        base/ntos/se/rmmain.c
        base/ntos/se/rmp.h
        base/ntos/se/rmvars.c
        base/ntos/se/seassign.c
        base/ntos/se/seastate.c
        base/ntos/se/seaudit.c
        base/ntos/se/seclient.c
        base/ntos/se/seglobal.c
        base/ntos/se/seinit.c
        base/ntos/se/semethod.c
        base/ntos/se/sep.c
        base/ntos/se/sep.h
        base/ntos/se/sepaudit.c
        base/ntos/se/subject.c
        base/ntos/se/token.c
        base/ntos/se/tokenadj.c
        base/ntos/se/tokendup.c
        base/ntos/se/tokenopn.c
        base/ntos/se/tokenp.h
        base/ntos/se/tokenqry.c
        base/ntos/se/tokenset.c
        base/ntos/verifier/halverifier.h
        base/ntos/verifier/vfbugcheck.h
        base/ntos/verifier/vfddi.h
        base/ntos/verifier/vfdeadlock.h
        base/ntos/verifier/vfdebug.h
        base/ntos/verifier/vfdef.h
        base/ntos/verifier/vfdevobj.h
        base/ntos/verifier/vffilter.h
        base/ntos/verifier/vfgeneric.h
        base/ntos/verifier/vfinit.h
        base/ntos/verifier/vfirp.h
        base/ntos/verifier/vfirpdb.h
        base/ntos/verifier/vfirplog.h
        base/ntos/verifier/vfmacro.h
        base/ntos/verifier/vfmajor.h
        base/ntos/verifier/vfmessage.h
        base/ntos/verifier/vfpacket.h
        base/ntos/verifier/vfpnp.h
        base/ntos/verifier/vfpower.h
        base/ntos/verifier/vfpragma.h
        base/ntos/verifier/vfprint.h
        base/ntos/verifier/vfrandom.h
        base/ntos/verifier/vfsettings.h
        base/ntos/verifier/vfstack.h
        base/ntos/verifier/vftriage.h
        base/ntos/verifier/vfutil.h
        base/ntos/verifier/vfwmi.h
        base/ntos/verifier/vfzwapi.h
        base/ntos/wmi/amd64/mcaevent.c
        base/ntos/wmi/i386/mcaevent.c
        base/ntos/wmi/alloc.c
        base/ntos/wmi/api.c
        base/ntos/wmi/callouts.c
        base/ntos/wmi/chunk.c
        base/ntos/wmi/consumer.c
        base/ntos/wmi/dataprov.c
        base/ntos/wmi/ds.c
        base/ntos/wmi/enabdisa.c
        base/ntos/wmi/globalog.c
        base/ntos/wmi/mca.c
        base/ntos/wmi/mcaevent.h
        base/ntos/wmi/notify.c
        base/ntos/wmi/provider.c
        base/ntos/wmi/register.c
        base/ntos/wmi/secure.c
        base/ntos/wmi/smbios.c
        base/ntos/wmi/traceapi.c
        base/ntos/wmi/tracelog.c
        base/ntos/wmi/tracep.h
        base/ntos/wmi/tracesup.c
        base/ntos/wmi/wmi.c
        base/ntos/wmi/wmidata.c
        base/ntos/wmi/wmikmp.h
        base/ntos/wmi/wmiumds.h
        public/ddk/inc/mountdev.h
        public/ddk/inc/ntddscsi.h
        public/halkit/inc/arccodes.h
        public/halkit/inc/inbv.h
        public/internal/base/inc/arc.h
        public/internal/base/inc/atom.h
        public/internal/base/inc/elfkrnl.h
        public/internal/base/inc/hdlsblk.h
        public/internal/base/inc/hdlsterm.h
        public/internal/base/inc/ntperf.h
        public/internal/base/inc/ntwmi.h
        public/internal/base/inc/pnpmgr.h
        public/internal/base/inc/pnpsetup.h
        public/internal/base/inc/profiles.h
        public/internal/base/inc/seopaque.h
        public/internal/base/inc/sertlp.h
        public/internal/base/inc/setupblk.h
        public/internal/base/inc/vdm.h
        public/internal/base/inc/wmiumkm.h
        public/internal/base/inc/wow64t.h
        public/internal/base/inc/wow64tls.h
        public/internal/base/inc/zwapi.h
        public/internal/ds/inc/ntrmlsa.h
        public/internal/sdktools/inc/ntdbg.h
        public/sdk/inc/crt/ctype.h
        public/sdk/inc/crt/excpt.h
        public/sdk/inc/crt/stdarg.h
        public/sdk/inc/crt/stdio.h
        public/sdk/inc/crt/stdlib.h
        public/sdk/inc/crt/string.h
        public/sdk/inc/crt/tchar.h
        public/sdk/inc/crt/wchar.h
        public/sdk/inc/align.h
        public/sdk/inc/basetsd.h
        public/sdk/inc/bugcodes.h
        public/sdk/inc/cfg.h
        public/sdk/inc/devguid.h
        public/sdk/inc/devioctl.h
        public/sdk/inc/diskguid.h
        public/sdk/inc/evntrace.h
        public/sdk/inc/guiddef.h
        public/sdk/inc/initguid.h
        public/sdk/inc/ioevent.h
        public/sdk/inc/mce.h
        public/sdk/inc/mountmgr.h
        public/sdk/inc/msaudite.h
        public/sdk/inc/nt.h
        public/sdk/inc/ntamd64.h
        public/sdk/inc/ntconfig.h
        public/sdk/inc/ntcsrmsg.h
        public/sdk/inc/ntdddisk.h
        public/sdk/inc/ntddft.h
        public/sdk/inc/ntddmup.h
        public/sdk/inc/ntddnull.h
        public/sdk/inc/ntddstor.h
        public/sdk/inc/ntdef.h
        public/sdk/inc/ntdskreg.h
        public/sdk/inc/ntelfapi.h
        public/sdk/inc/ntexapi.h
        public/sdk/inc/nti386.h
        public/sdk/inc/ntia64.h
        public/sdk/inc/ntimage.h
        public/sdk/inc/ntioapi.h
        public/sdk/inc/ntiolog.h
        public/sdk/inc/ntiologc.h
        public/sdk/inc/ntkeapi.h
        public/sdk/inc/ntldr.h
        public/sdk/inc/ntlpcapi.h
        public/sdk/inc/ntlsa.h
        public/sdk/inc/ntmmapi.h
        public/sdk/inc/ntnls.h
        public/sdk/inc/ntobapi.h
        public/sdk/inc/ntpnpapi.h
        public/sdk/inc/ntpoapi.h
        public/sdk/inc/ntpsapi.h
        public/sdk/inc/ntregapi.h
        public/sdk/inc/ntrtl.h
        public/sdk/inc/ntrtlpath.h
        public/sdk/inc/ntrtlstringandbuffer.h
        public/sdk/inc/ntseapi.h
        public/sdk/inc/ntstatus.h
        public/sdk/inc/nturtl.h
        public/sdk/inc/ntxcapi.h
        public/sdk/inc/nxamd64.h
        public/sdk/inc/nxi386.h
        public/sdk/inc/pebteb.h
        public/sdk/inc/poppack.h
        public/sdk/inc/pshpack1.h
        public/sdk/inc/pshpack2.h
        public/sdk/inc/pshpack4.h
        public/sdk/inc/pshpack8.h
        public/sdk/inc/pshpck16.h
        public/sdk/inc/safeboot.h
        public/sdk/inc/specstrings.h
        public/sdk/inc/strsafe.h
        public/sdk/inc/triage.h
        public/sdk/inc/wdbgexts.h
        public/sdk/inc/wdmguid.h
        public/sdk/inc/winerror.h
        public/sdk/inc/wmidata.h
        public/sdk/inc/wmiguid.h
        public/sdk/inc/wmistr.h)

include_directories(base/inc)
include_directories(base/ntos/inc)
include_directories(public/ddk/inc)
include_directories(public/halkit/inc)
include_directories(public/internal/base/inc)
include_directories(public/internal/ds/inc)
include_directories(public/internal/sdktools/inc)
include_directories(public/sdk/inc)
include_directories(public/sdk/inc/crt)

add_executable(WindowsResearchKernel ${SOURCE_FILES})